<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B3000000">

        <ImageView
            android:id="@+id/iv_splash_org_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_above="@+id/lbl_splash_org_slogan"
            android:layout_marginBottom="-16dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/splash_logo_desc"
            app:srcCompat="@drawable/main_logo" />

        <TextView
            android:id="@+id/lbl_splash_org_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/splash_heading"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/lbl_splash_org_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_splash_org_name"
            android:layout_centerHorizontal="true"
            android:text="@string/splash_slogan"
            android:textColor="#bbdefb"
            android:layout_marginTop="-4dp"
            android:textSize="15sp" />

    </RelativeLayout>

</RelativeLayout>













